Fix img and add map
Fixed images and add map

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 .main-screen {
-    background:  linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1)), url(/img/wallpaper.jpg);
+    background:  linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.1)), url(../img/wallpaper.jpg);
     height: 100vh;
 }
 
@@ -132,16 +132,16 @@ body {
 }
 
 .reasons__card--bg-1 {
-    background:  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3)), url(/img/travel-1.jpg);
+    background:  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3)), url(../img/travel-1.jpg);
 }
 
 .reasons__card--bg-2 {
-    background:  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3)), url(/img/travel-2.jpg);
+    background:  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3)), url(../img/travel-2.jpg);
     
 }
 
 .reasons__card--bg-3 {
-    background:  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3)), url(/img/travel-3.jpg);
+    background:  linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3)), url(../img/travel-3.jpg);
     
 }
 
@@ -341,7 +341,7 @@ body {
 }
 
 .gallery__img:hover {
-    transform: scale(1.4);
+    transform: scale(1.3);
 }
 
 .footer {
@@ -402,6 +402,7 @@ body {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
+    margin-bottom: 30px;
 }
 
 .social__links {
@@ -419,4 +420,8 @@ body {
 .social__img:hover {
     background-color: dodgerBlue;
     
+}
+
+#map {
+    padding-top: 30px;
 }
